# glyphbox

./: .gitignore  CLAUDE.md  CMakeLists.txt  GLYPHBOX-Software-Guide-ClaudeCode.md  README.md  glyphbox.service
.claude/: settings.local.json
cartridges/: bouncer.gbcart  dk.gbcart  dungeon.gbcart  galaga.gbcart  golf.gbcart  hello.gbcart  pac.gbcart  rpg.gbcart  runner.gbcart  sta.gbcart  sw.gbcart  tennis.gbcart  test.gbcart  tetris.gbcart
demos/10s/: game.lua  meta.toml  sprites.txt
demos/StarW/: game.lua  meta.toml  sprites.txt
demos/bouncer/: game.lua  meta.toml
demos/dk/: game.lua  meta.toml  sprites.txt  tilemap.txt
demos/dungeon/: game.lua  sprites.txt  tilemap.txt
demos/galaga/: game.lua  meta.toml  sprites.txt
demos/golf/: game.lua  meta.toml  music.txt  sfx.txt  sprites.txt
demos/hello/: game.lua  meta.toml  sprites.txt  tilemap.txt
demos/pac/: game.lua  meta.toml  sfx.txt  sprites.txt
demos/rpg/: game.lua  meta.toml  sprites.txt
demos/run/: game.lua  sprites.txt
demos/runner/: game.lua  meta.toml  sprites.txt
demos/sw/: game.lua  meta.toml  sprites.txt
demos/tennis/: game.lua  meta.toml
demos/tetris/: game.lua  meta.toml
docs/: GLYPHBOX-Fabrication-Brief.md  GLYPHBOX_FABRICATION_BRIEF.md  scanner.js  style.css
docs/web/: glyphbox.html  glyphbox.js  glyphbox.wasm
src/: audio.c  audio.h  cart.c  cart.h  font.h  input.c  input.h  lua_api.c  lua_api.h  main.c  renderer.c  renderer.h  runtime.c  runtime.h
tools/: card-print.py  cart-builder.py  cart-daemon.py  img-to-sprites.py  qr-decode.py  qr-encode.py  token-count.py
web/: CMakeLists.txt  README.md  scanner.js  shell.html
